# saf_datasets

./: README.md  pyproject.toml  requirements.txt  setup.py
saf_datasets/: __init__.py
saf_datasets/annotators/: __init__.py  allennlp_srl.py  amr.py  models.py  spacy.py  transformer.py
saf_datasets/data_access/: __init__.py  allnli.py  codwoe.py  complex_sentences.py  cpae.py  dataset.py  entailmentbank.py  inference_types.py  morphodb.py  stsb.py  wiktionary.py  wordnet_filtered.py  wordnet_formalised.py  wordnet_spanish.py
saf_datasets/wrappers/: hf.py  torch.py
